Prevented the browser UI from scrolling on drawer open/close and hid the overflow from the footer

--- a/src/client/stylesheets/components/_footer.scss
+++ b/src/client/stylesheets/components/_footer.scss
@@ -18,6 +18,7 @@
 
     .op-text {
         flex: 20;
+        overflow-y: hidden;
     }
 
     .footer-buttons {
